--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
     <h1>I'm Leen .</h1>
     <h2>a web designer</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
 </div>
 
