--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <h1>I'm Leen .</h1>
     <h2>a web designer</h2>
     <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img src="Images/mountain.png" alt="mountain-img">
 </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="image" src="F:\Full Stack\CSS-My Site\Images\image.png" alt="Leen-image">
+      <img class="image" src="Images\image.png" alt="Leen-image">
       <h2>Hello.</h2>
       <p class="intro">I am a web deloper and entry level solution architect based in banglore india . I ❤ BFC. </p>
     </div>
@@ -29,7 +29,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="code-img" src="F:\Full Stack\CSS-My Site\Images\data.png" alt="">
+        <img class="code-img" src="Images\data.png" alt="">
         <h3>Programming & Scripting Languages</h3>
         <p>C, C++,Core Java</p>
       </div>
@@ -37,21 +37,21 @@
 
 
       <div class="skill-row">
-        <img class="global-img" src="F:\Full Stack\CSS-My Site\Images\global.png" alt="">
+        <img class="global-img" src="Images\global.png" alt="">
         <h3>Web Languages & Frameworks</h3>
         <p> HTML, XML, CSS, JSP, Servlet</p>
       </div>
       <hr>
 
       <div class="skill-row">
-        <img class="os-img" src="F:\Full Stack\CSS-My Site\Images\windows-os.png" alt="">
+        <img class="os-img" src="Images\windows-os.png" alt="">
         <h3>Operating Systems</h3>
         <p> Windows, Linux, Unix, Android</p>
       </div>
       <hr>
 
       <div class="skill-row">
-        <img class="db-img" src="F:\Full Stack\CSS-My Site\Images\database.png" alt="">
+        <img class="db-img" src="Images\database.png" alt="">
         <h3>Database Systems</h3>
         <p> MYSQL, Oracle, MS-Access</p>
       </div>
@@ -59,7 +59,7 @@
 
 
       <div class="skill-row">
-        <img class="cc-img" src="F:\Full Stack\CSS-My Site\Images\cloud computing.png" alt="">
+        <img class="cc-img" src="Images\cloud computing.png" alt="">
         <h3>Cloud Computing </h3>
         <p>Amazon Web Services (EC2, S3, ELB, EBS, EFS, VPC, IAM, SNS, RDS,Route53, CloudWatch, CloudFront, CloudTrail, AutoScaling)</p>
       </div>
